# eve-looter

./: Cargo.toml  Dockerfile  README.md  maskfile.md
src/: logic.rs  main.rs  models.rs
templates/: index.html
templates/partials/: configuration.html  head.html  kill_list.html  payout.html
