[package]
name = "eve-looter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.11", features = [
  "json",
  "blocking",
  "rustls-tls",
  "gzip",
  "deflate",
  "brotli",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
askama = "0.12"
askama_axum = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1" # NEW: For parsing URLs
once_cell = "1" # NEW: For compiling Regex once
futures = "0.3"
