[package]
name = "eve-looter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
# Update reqwest to ensure we have client-side compression too
reqwest = { version = "0.11", features = [
  "json",
  "blocking",
  "rustls-tls",
  "gzip",
  "deflate",
  "brotli",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
askama = "0.12"
askama_axum = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
] } # Enhanced logging
regex = "1"
once_cell = "1"
futures = "0.3"

# NEW: Middleware for Compression and Logging
tower = "0.4"
tower-http = { version = "0.5", features = ["compression-full", "trace"] }
